feat: Register and Login
