# internal/adapter/handler/http/response.go
@@ -3,6 +3,7 @@ package http
 import (
 	"errors"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
@@ -50,19 +51,23 @@ func newAuthResponse(token string) authResponse {
 }
 
 type userResponse struct {
-	ID       uint64 `json:"id" example:"1"`
-	Name     string `json:"name" example:"John Doe"`
-	Email    string `json:"email" example:"test@example.com"`
-	Username string `json:"username" example:"vicalar"`
+	ID        uint64    `json:"id" example:"1"`
+	Name      string    `json:"name" example:"John Doe"`
+	Email     string    `json:"email" example:"test@example.com"`
+	Username  string    `json:"username" example:"vicalar"`
+	CreatedAt time.Time `json:"created_at" example:"1970-01-01T00:00:00Z"`
+	UpdatedAt time.Time `json:"updated_at" example:"1970-01-01T00:00:00Z"`
 }
 
 // newUserResponse is a helper function to create a response body for handling user data
 func newUserResponse(user *domain.User) userResponse {
 	return userResponse{
-		ID:       user.ID,
-		Name:     user.Name,
-		Email:    user.Email,
-		Username: user.Username,
+		ID:        user.ID,
+		Name:      user.Name,
+		Email:     user.Email,
+		Username:  user.Username,
+		CreatedAt: user.CreatedAt,
+		UpdatedAt: user.UpdatedAt,
 	}
 }
 
